--- a/chrome/locale/de/sbbtt.properties
+++ b/chrome/locale/de/sbbtt.properties
@@ -1,2 +1,3 @@
 monthNames= Januar,Februar,März,April,Mai,Juni,Juli,August,September,Oktober,November,Dezember
 timetableURL= http://fahrplan.sbb.ch/bin/query.exe/dn?
+profileURL= http://fahrplan.sbb.ch/bin/profile.exe/dn
