--- a/chrome/locale/it/sbbtt.properties
+++ b/chrome/locale/it/sbbtt.properties
@@ -1,2 +1,3 @@
 monthNames= Gennaio,Febbraio,Marzo,Aprile,Maggio,Giugno,Luglio,Agosto,Settembre,Ottobre,Novembre,Dicembre
 timetableURL= http://fahrplan.sbb.ch/bin/query.exe/in?
+profileURL= http://fahrplan.sbb.ch/bin/profile.exe/in
