--- a/chrome/locale/en/sbbtt.properties
+++ b/chrome/locale/en/sbbtt.properties
@@ -1,3 +1,4 @@
 monthNames= January,February,March,April,May,June,July,August,September,October,November,December
 timetableURL= http://fahrplan.sbb.ch/bin/query.exe/en?
 profileURL= http://fahrplan.sbb.ch/bin/profile.exe/en
+locale= en
