--- a/chrome/locale/fr/sbbtt.properties
+++ b/chrome/locale/fr/sbbtt.properties
@@ -1,3 +1,4 @@
 monthNames= Janvier,Fevrier,Mars,Avril,May,Juin,Juillet,Aout,Septembre,Octobre,Novembre,Décembre
 timetableURL= http://fahrplan.sbb.ch/bin/query.exe/fn?
 profileURL= http://fahrplan.sbb.ch/bin/profile.exe/fn
+locale= fr
