--- a/trunk/chrome/locale/de/sbbtt.properties
+++ b/trunk/chrome/locale/de/sbbtt.properties
@@ -1,3 +1,4 @@
 monthNames= Januar,Februar,März,April,Mai,Juni,Juli,August,September,Oktober,November,Dezember
 timetableURL= http://fahrplan.sbb.ch/bin/query.exe/dn?
 profileURL= http://fahrplan.sbb.ch/bin/profile.exe/dn
+locale= de
